@startuml
'https://plantuml.com/class-diagram

note as N1
  "-- Is used to show the association,
   or the use of each class by another"
end note

class Person{
# firstName : String
# lastName : String
--
+ constructor Person (String firstName, String lastName)
}
Person -- NamesSort


class NamesSort{
# names : TreeMap <String, Person>
__
+ void placeNamesInMap(String fileName)
+ void printNames()
+ void SortedMap<String, Person> getTreeMap()
}
NamesSort -- Solution41

class Solution41{
# main(String[] args)
}
@enduml